umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_extended_mol_rdkit_github189.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 8
bond_count: 8
sum_formula: Al2Cl6
